fix(browser-card): spacing

--- a/projects/r-components/src/components/extra/r-browser-card/r-browser-card.component.scss
+++ b/projects/r-components/src/components/extra/r-browser-card/r-browser-card.component.scss
@@ -1,8 +1,9 @@
 :host {
+  display: block;
+  border-radius: 10px;
   background-color: #282C34;
+  margin: 24px 0;
   .header {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     margin: 0 15px;
     padding: 19px 22px 10px;
     display: flex;
@@ -27,8 +28,6 @@
     }
   }
   .body {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
     margin: 0 15px;
     padding: 0 22px;
     background-color: #282C34;
